# ag-ui

.github/: pull_request_template.md
apps/client-cli-example/src/: index.ts
apps/dojo/e2e/: playwright.config.ts  slack-layout-simple.ts  slack-layout.ts  test-isolation-helper.ts
apps/dojo/e2e/featurePages/: AgenticChatPage.ts  HumanInTheLoopPage.ts  SharedStatePage.ts  (+1 more)
integrations/langgraph/python/: pyproject.toml
integrations/langgraph/python/ag_ui_langgraph/: __init__.py  agent.py  endpoint.py  types.py  utils.py
integrations/langgraph/python/examples/agents/agentic_chat/: agent.py
integrations/langgraph/python/examples/agents/agentic_chat_reasoning/: agent.py
integrations/langgraph/python/examples/agents/agentic_generative_ui/: agent.py
integrations/langgraph/python/examples/agents/human_in_the_loop/: agent.py
integrations/langgraph/python/examples/agents/multimodal_messages/: agent.py
integrations/langgraph/python/examples/agents/predictive_state_updates/: agent.py
integrations/langgraph/python/examples/agents/subgraphs/: __init__.py  agent.py
integrations/langgraph/python/examples/agents/tool_based_generative_ui/: agent.py
integrations/langgraph/python/tests/: conftest.py  test_integration.py  test_interrupts.py  test_messages_in_process.py  test_multimodal.py  test_reasoning.py  test_tool_result_persistence.py
sdks/python/: pyproject.toml
sdks/python/ag_ui/core/: __init__.py  events.py  types.py
sdks/python/ag_ui/encoder/: __init__.py  encoder.py
sdks/python/tests/: test_encoder.py  test_events.py  test_text_roles.py  test_types.py
(+24 files in other folders)
