[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag-ui-protocol"
version = "0.1.10"
description = "Protocol definitions for Agentic UI"
authors = [{ name = "Markus Ecker", email = "markus.ecker@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["pydantic>=2.11.2"]

[tool.hatch.build.targets.wheel]
packages = ["ag_ui"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
