[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag-ui-langgraph"
version = "0.0.22"
description = "Implementation of the AG-UI protocol for LangGraph."
authors = [{ name = "Ran Shem Tov", email = "ran@copilotkit.ai" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.3.25,<1.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.12"]

[project.scripts]
dev = "ag_ui_langgraph.dojo:main"

[tool.hatch.build.targets.wheel]
packages = ["ag_ui_langgraph"]

[dependency-groups]
dev = [
    "fastapi>=0.124.0",
    "pytest>=9.0.2",
]
